tests/error/linear_errors/unused_non_terminating.err
Error: Drop violation (at $FILE:7:8)
  | 
5 | 
6 | @guppy
7 | def foo(q: qubit @owned) -> None:
  |         ^^^^^^^^^^^^^^^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
